tests/snapshots/change_operations_test__cb_change_backward.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:13
Lines: 1

Buffer:
hello worldrt[h]
