tests/snapshots/change_operations_test__cc_and_undo.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 3

Buffer:
[ ]
line 2
line 3
