tests/snapshots/change_operations_test__cc_basic.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:11
Lines: 3

Buffer:
changed lin[e]
line 2
line 3
