tests/snapshots/change_operations_test__cc_indented_line.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:7
Lines: 2

Buffer:
new lin[e]
other
