tests/snapshots/change_operations_test__cc_last_line.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:11
Lines: 3

Buffer:
line 1
changed las[t]
