tests/snapshots/change_operations_test__cc_preserves_indentation.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:14
Lines: 2

Buffer:
    new conten[t]
    another
