tests/snapshots/change_operations_test__cc_with_count.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:10
Lines: 2

Buffer:
replacemen[t]
line 4
