tests/snapshots/change_operations_test__cgg_change_to_beginning_of_file.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:6
Lines: 4

Buffer:
line l[e]1
line 2
line 3
line 4
