tests/snapshots/change_operations_test__change_empty_selection.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:3
Lines: 1

Buffer:
hel[!]l
